# gptman

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  download.sh  flake.nix
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml  release.yml  rust.yml  update.yml
assets/: disk1.img  disk2.img
src/: attribute_bits.rs  big_array.rs  gpt.rs  lib.rs  linux.rs  main.rs  protective_mbr.rs  serde_extensions.rs  table.rs  types.rs  uuid.rs
src/cli/: add_partition.rs  attribute_bits.rs  change_alignment.rs  change_disk_guid.rs  change_partition_guid.rs  change_partition_name.rs  change_type.rs  commands.rs  copy_all_partitions.rs  copy_partition.rs  delete_partition.rs  display_bytes.rs  error.rs  fix_partitions_order.rs  macros.rs  main.rs  mod.rs  opt.rs  print.rs  print_raw_data.rs  protective_mbr.rs  randomize.rs  resize_partition.rs  swap_partition_index.rs  table.rs  toggle_attributes.rs  toggle_legacy_bootable.rs  toggle_no_block_io.rs  toggle_required.rs  types.rs  uuid.rs  write.rs
tests/fixtures/: disk1.img  disk3.img  disk4.img
