[package]
name = "gptman"
version = "1.1.4"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85"
description = "Pure Rust library to read and modify GUID partition tables"
repository = "https://github.com/rust-disk-partition-management/gptman"
homepage = "https://github.com/rust-disk-partition-management/gptman"
documentation = "https://docs.rs/gptman"
readme = "README.md"
include = ["src/**/*.rs", "tests/fixtures/*.img", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["gpt", "partition", "table", "filesystem", "disk"]
categories = ["filesystem"]

[lib]
name = "gptman"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
crc = "3.0.0"
thiserror = "2.0.12"

[features]
default = [ "nix" ]

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", default-features = false, features = ["ioctl"], optional = true }
